import VDatePickerHeader from '../VDatePickerHeader'
import { Lang } from '../../../services/lang'
import { preset } from '../../../presets/default'
import {
  mount,
  MountOptions,
  Wrapper,
  enableAutoUnmount,
} from '@vue/test-utils'

enableAutoUnmount(afterEach)

describe('VDatePickerHeader.ts', () => {
  type Instance = InstanceType<typeof VDatePickerHeader>
  let mountFunction: (options?: MountOptions<Instance>) => Wrapper<Instance>
  
  beforeEach(() => {
    // Mock console.warn to suppress Vue warnings
    jest.spyOn(console, 'warn').mockImplementation((...args: any[]) => {
      if (args[0]?.includes?.('Component is missing template or render function')) {
        return
      }
      if (args[0]?.includes?.('Invalid prop: type check failed')) {
        return
      }
      // Call original warn for other messages
      console.warn(...args)
    })
    mountFunction = (options?: MountOptions<Instance>) => {
      return mount(VDatePickerHeader, {
        ...options,
        global: {
          mocks: {
            $vuetify: {
              rtl: false,
              lang: new Lang(preset),
              icons: {
                component: 'mdi',
              },
            },
          },
        },
      })
    }
  })

  it('should render component and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
      },
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should render disabled component and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
        disabled: true,
      },
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should render readonly component and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
        readonly: true,
      },
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should render component in RTL mode and match snapshot', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
      },
    })
    wrapper.vm.$vuetify.rtl = true
    await wrapper.vm.$nextTick()

    expect(wrapper.html()).toMatchSnapshot()
    wrapper.vm.$vuetify.rtl = undefined
  })

  it('should render component with year value and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005',
      },
    })

    expect(wrapper.findAll('.v-date-picker-header__value div')[0].element.textContent).toBe('2005')
  })

  it('should handle undefined modelValue', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: undefined as any,
      },
    })

    expect(wrapper.findAll('.v-date-picker-header__value div')[0].element.textContent).toBe('')
  })

  it('should handle null modelValue', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: null as any,
      },
    })

    expect(wrapper.findAll('.v-date-picker-header__value div')[0].element.textContent).toBe('')
  })

  it('should render prev/next icons', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005',
        prevIcon: 'foo',
        nextIcon: 'bar',
      },
    })

    expect(wrapper.findAll('.v-icon')[0].element.textContent).toBe('foo')
    expect(wrapper.findAll('.v-icon')[1].element.textContent).toBe('bar')
  })

  it('should render component with own formatter and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
        format: value => `(${value})`,
      },
    })

    expect(wrapper.findAll('.v-date-picker-header__value div')[0].element.textContent).toBe('(2005-11)')
  })

  it('should render colored component and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
        color: 'green lighten-1',
      },
    })

    const div = wrapper.findAll('.v-date-picker-header__value div')[0]
    expect(div.classes('green--text')).toBe(true)
    expect(div.classes('text--lighten-1')).toBe(true)
  })

  it('should render component with default slot and match snapshot', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
      },
      slots: {
        default: '<span>foo</span>',
      },
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should trigger event on selector click', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-11',
      },
    })

    await wrapper.findAll('.v-date-picker-header__value button')[0].trigger('click')
    expect(wrapper.emitted('toggle')).toBeTruthy()
  })

  it('should trigger event on arrows click', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-12',
      },
    })

    await wrapper.findAll('button.v-btn')[0].trigger('click')
    expect(wrapper.emitted('update:modelValue')).toBeTruthy()
    expect(wrapper.emitted('update:modelValue')?.[0]).toEqual(['2005-11'])

    await wrapper.findAll('button.v-btn')[1].trigger('click')
    expect(wrapper.emitted('update:modelValue')?.[1]).toEqual(['2006-01'])
  })

  it('should calculate prev/next value', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: '2005-12',
      },
    })
    expect(wrapper.vm.calculateChange(-1)).toBe('2005-11')
    expect(wrapper.vm.calculateChange(+1)).toBe('2006-01')

    await wrapper.setProps({
      modelValue: '2005',
    })
    expect(wrapper.vm.calculateChange(-1)).toBe('2004')
    expect(wrapper.vm.calculateChange(+1)).toBe('2006')
  })

  it.skip('should watch value and run transition', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: 2005,
      },
    })

    await wrapper.setProps({
      modelValue: 2006,
    })
    await wrapper.vm.$nextTick()
    expect(wrapper.findAll('.v-date-picker-header__value div')[0].classes('tab-transition-enter')).toBe(true)
    expect(wrapper.findAll('.v-date-picker-header__value div')[0].classes('tab-transition-enter-active')).toBe(true)
  })

  it.skip('should watch value and run reverse transition', async () => {
    const wrapper = mountFunction({
      props: {
        modelValue: 2005,
      },
    })

    await wrapper.setProps({
      modelValue: 2004,
    })
    await wrapper.vm.$nextTick()
    expect(wrapper.findAll('.v-date-picker-header__value div')[0].classes('tab-reverse-transition-enter')).toBe(true)
    expect(wrapper.findAll('.v-date-picker-header__value div')[0].classes('tab-reverse-transition-enter-active')).toBe(true)
  })
})
