// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePickerHeader.ts should render component and match snapshot 1`] = `
<div class="v-date-picker-header theme--light">
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
</div>
`;

exports[`VDatePickerHeader.ts should render component in RTL mode and match snapshot 1`] = `
<div class="v-date-picker-header theme--light">
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
</div>
`;

exports[`VDatePickerHeader.ts should render component with default slot and match snapshot 1`] = `
<div class="v-date-picker-header theme--light">
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button type="button">
        <span>
          foo
        </span>
      </button>
    </div>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
</div>
`;

exports[`VDatePickerHeader.ts should render disabled component and match snapshot 1`] = `
<div class="v-date-picker-header v-date-picker-header--disabled theme--light">
  <button class="v-btn v-btn--disabled v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
          disabled
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
  <div class="v-date-picker-header__value v-date-picker-header__value--disabled">
    <div>
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="v-btn v-btn--disabled v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
          disabled
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
</div>
`;

exports[`VDatePickerHeader.ts should render readonly component and match snapshot 1`] = `
<div class="v-date-picker-header theme--light">
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
          type="button"
  >
    <span class="v-btn__content">
      <span class="v-icon notranslate theme--light"
            aria-hidden="true"
      >
      </span>
    </span>
  </button>
</div>
`;
